fix squished expanded images in chat

--- a/files/assets/css/chat.css
+++ b/files/assets/css/chat.css
@@ -167,7 +167,3 @@ img[alt^="![]("], .img {
 #online > li, #online3 > li {
     margin-top: 0.35rem;
 }
-
-#desktop-expanded-image {
-	min-height: 150px;
-}
